# fastLLaMa

./: .dockerignore  .eslintrc.cjs  .eslintrc.js  .gitignore  .prettierrc.json  CMakeLists.txt  Dockerfile  LICENSE  Makefile  README.md  bridge.cpp  build.sh  build_python.py  compile.py  convert-pth-to-ggml.py  deploy.js  example-alpaca.py  example.py  export-alpaca-lora.py  ggml.c  index.html  package.json  pnpm-lock.yaml  postcss.config.js  prettier.config.js  pyproject.toml  quantize.py  requirements.txt  setup.py  tailwind.config.js  tokenizer.hpp  tsconfig.json  tsconfig.node.json  utils.cpp  utils.h  vite.config.ts  vocab.hpp
.github/workflows/: docker-image.yml
assets/: ChatView-17cc931a.js  ChatView-7d7cf493.js  ChatView-a7f0bc77.js  ChatView-b1aece97.js  ChatView-f92f07ec.js  ErrorView-32f4c8ab.js  ErrorView-367376c0.js  ErrorView-4df6d196.js  ErrorView-9b25d03b.js  ErrorView-d3615ed4.js  HomeView-38d78c05.js  HomeView-5e250566.css  HomeView-a61eabfa.js  HomeView-b1196bed.js  HomeView-b9e02bdf.js  HomeView-ed3f1fec.js  ResizeObserver-fd39e859.js  flow-398577f0.js  flow-a7a37bab.js  flow-cd84bf0a.js  focus-visible-06d491f2.js  index-086eb4c0.js  index-53679211.js  index-5dd877b8.js  index-5ed67125.js  index-9805b1fa.js  index-9dacdfd5.css  index-a8e68aff.js  index-c57942c0.js  index-e08a0709.js  index-e9beeaa1.js  index-fb513195.js  index-fdb700ed.js  overlay-118e3c35.js  overlay-347dfbd2.js  overlay-c6cb1573.js
cmake/: BasicUtils.cmake  CompilerFlagVariables.cmake  CompilerFlags.cmake  CompilerWarnings.cmake  Cuda.cmake  OpenBLAS.cmake  OpenMP.cmake
examples/: CMakeLists.txt
examples/c/: CMakeLists.txt  example-alpaca.c  example.c  perplexity.c
examples/html/: webui_example.html
examples/python/: example-alpaca.py  example-logging.py  example-lora-adapter.py  example-save-load.py  example-vicuna.py  example.py  fastllama.py  fastllama_old.py  perplexity.py  webui_srv.py
examples/python/fastllama/: __init__.py
fastLLaMa/: api.py
include/: bridge.hpp  file_loader.hpp  file_pipe.hpp  file_reader.hpp  file_writer.hpp  ggml-cuda.h  ggml.h  llama.hpp  logger.hpp  macro.hpp  maths_utils.hpp  mmap.hpp  model_type.hpp  ring_buffer.hpp  span.hpp  token_buffer.hpp  tokenizer.hpp  uninitialized_buffer.hpp  utils.h  utils.hpp  vocab.hpp  watermark.hpp
include/concurrency/: deque.hpp  lock_queue.hpp  pool.hpp  utils.hpp
include/detail/: file.hpp
include/tensor/: mem_context.hpp  utils.hpp
interfaces/: CMakeLists.txt
interfaces/c/: CMakeLists.txt  fastllama.h  main.c  main.cpp
interfaces/python/: CMakeLists.txt  fastllama.py  main.cpp
lib/: bridge.cpp  ggml-cuda.cu  ggml.c  llama.cpp  utils.cpp
scripts/: convert-lora-to-ggml.py  convert-pth-to-ggml.py  convert-unversioned-ggml-to-ggml.py  convert.py  export-from-huggingface.py
scripts/utils/: paths.py  python_info.py  python_version.py  shell.py
src/: App.vue  CMakeLists.txt  alpaca.cpp  index.css  main.cpp  main.py  main.ts  quantize.cpp
src/assets/: main.css
src/components/: AppConnectDialog.vue  AppFilePicker.vue  AppLoading.vue  HomePage.ts  chatBox.ts  messages.ts
src/components/chat/: TheChatMessageStatus.vue  TheChatModelMessage.vue  TheChatProvider.vue  TheChatSystemMessage.vue  TheChatUserMessage.vue
src/components/home/: TheHomeModelParameters.vue  TheHomeProvider.vue  TheHomeWelcomeScreen.vue
src/components/side-nav/: TheSideNavProvider.vue
src/layout/: AppMainLayout.vue
src/lib/: command.py  command_list.py  inputHistory.ts  message_manager.py  notification.ts  parser.ts  utils.ts  watermark.ts
src/model/: dummy.ts  jsonSchema.ts  schema.ts
src/router/: index.ts
src/stores/: appStore.ts  counter.ts  socketStore.ts
src/utils/: command.py  command_list.py  fastllama_websocket.py  file_manager.py  message_manager.py
src/views/: ChatView.vue  ErrorView.vue  HomeView.vue
test/: command.test.py  file_manager.test.py  message_manager.test.py
utils/: cpu_feature.py
