[build-system]
requires = ["setuptools", "wheel", "py-cpuinfo>=9.0.0", "cmake>=3.20.2"]

[tool.setuptools.metadata]
name = "fastllama"
version = "1.0.0"
description = "fastLLaMa is an experimental high-performance framework for running Decoder-only LLMs with 4-bit quantization in Python using a C/C++ backend."  # Add a description for your package here
author = "PotatoSpudowski & Amit Singh"
author_email = "bahushruth.cs@gmail.com"
license = "MIT"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
]

[tool.setuptools.package_data]
fastllama = ["pyfastllama.so"]

# [tool.setuptools.install_requires]
# dependencies = [
#     "numpy>=1.24.2",
#     "inquirer>=3.1.3",
#     "py-cpuinfo>=9.0.0",
#     "cmake>=3.20.2"
# ]

[tool.setuptools.package_dir]
fastllama = "examples/python/fastllama"

[tool.setuptools.packages]
packages = ["fastllama"]