_SUBDIRLIST(INTERFACE_DIRS ${CMAKE_CURRENT_SOURCE_DIR})

foreach(INTERFACE_DIR ${INTERFACE_DIRS})
    if(INTERFACES_${INTERFACE_DIR})
        message(STATUS "Building interface folder '${INTERFACE_DIR}'")
        add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/${INTERFACE_DIR})
    endif(INTERFACES_${INTERFACE_DIR})
endforeach(INTERFACE_DIR ${INTERFACE_DIRS})